@@ -1032,16 +1032,28 @@ long wxExecuteImpl(CharType **argv, int flags, wxProcess *handler)
     {
         arg = *argv++;
 
-        // escape any quotes present in the string to avoid interfering with
-        // the command line parsing in the child process
-        arg.Replace("\"", "\\\"", true /* replace all */);
+        bool quote;
+        if ( arg.empty() )
+        {
+            // we need to quote empty arguments, otherwise they'd just
+            // disappear
+            quote = true;
+        }
+        else // non-empty
+        {
+            // escape any quotes present in the string to avoid interfering
+            // with the command line parsing in the child process
+            arg.Replace("\"", "\\\"", true /* replace all */);
 
-        // and quote any arguments containing the spaces to prevent them from
-        // being broken down
-        if ( arg.find_first_of(" \t") == wxString::npos )
-            command += arg;
-        else
+            // and quote any arguments containing the spaces to prevent them from
+            // being broken down
+            quote = arg.find_first_of(" \t") != wxString::npos;
+        }
+
+        if ( quote )
             command += '\"' + arg + '\"';
+        else
+            command += arg;
 
         if ( !*argv )
             break;
